# on9log

./: .gitlab-ci.yml  AGENTS.md  CMakeLists.txt  Kconfig  README.md  esp_stdio_log_vfs.c  esp_stdio_log_vfs.h  log_vfs_dev.c  log_vfs_dev.h  on9log.c  on9log.h  on9log.hpp  on9log_config.h  on9log_esp_isr.c  on9log_esp_isr.h  on9log_esp_port.c  on9log_esp_vfs.c  on9log_esp_vfs.h  on9log_fmt.h  on9log_port.h  on9log_port_weak.c  on9log_transport.h  on9log_unix_port.c  on9log_unix_stdio.c  on9log_unix_stdio.h
.github/workflows/: ci.yml
examples/: on9log_unix_demo.cpp
host_cli/: AGENTS.md  Cargo.toml
host_cli/on9log-capture/src/: db.rs  main.rs  term.rs
host_cli/on9log-cli/src/: main.rs  term.rs
host_cli/on9log-protocol/: Cargo.toml
host_cli/on9log-protocol/src/: cppfmt.rs  crash.rs  crc.rs  decode.rs  elf_resolv.rs  framer.rs  lib.rs  printf.rs  wire.rs
host_cli/src/: crash.rs  crc.rs  decode.rs  elf_resolv.rs  framer.rs  lib.rs  main.rs  printf.rs  term.rs  wire.rs
tests/: on9log_core_regression.cpp  on9log_unix_smoke.cpp
